--- a/pinkman-ui/src/main/res/values/styles.xml
+++ b/pinkman-ui/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="DefaultKeyboard">
+    <style name="PinkmanDefaultKeyboard">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="buttonHeight">64dp</item>
