--- a/pinkman-ui/src/main/res/drawable/pinkman_circle_red.xml
+++ b/pinkman-ui/src/main/res/drawable/pinkman_circle_red.xml
@@ -6,6 +6,6 @@
         android:width="24dp"
         android:height="24dp" />
 
-    <solid android:color="@color/red" />
+    <solid android:color="@color/pinkman_red" />
 
 </shape>
